# CalculatorPlusPlus

./: BinaryEvaluator.cpp  BinaryEvaluator.h  BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Evaluator.cpp  Evaluator.h  README.md  SimpleCalculator.cpp  SimpleCalculator.h  main.cpp
